# JNI

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ifengyu/talk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/extern_src/: log.c
app/src/main/cpp/include/: interface.h  log.h
app/src/main/java/com/ifengyu/talk/: MainActivity.java  TalkManager.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ifengyu/talk/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
